# Shunting-Yard-Algorithm

./: CMakeLists.txt
include/: shuntingYard.h  tests.h
src/: main.cpp  shuntingYard.cpp
tests/: main.cpp  test_shuntingYard.cpp  test_tokenizer.cpp
